# JungleWMS

./: .dockerignore  .gitignore  .gitpod.yml  Cargo.toml
.github/: GorillaAuth.yml
.github/workflows/: GorillaAuth.yml
GorillaAuth/: gorillaauth_service.Dockerfile  gorillaauth_website.Dockerfile
GorillaAuth/gorillaauth_client/: Cargo.toml
GorillaAuth/gorillaauth_service/: Cargo.toml
GorillaAuth/gorillaauth_service/src/: health_check.rs  lib.rs  main.rs  responses.rs  state.rs
GorillaAuth/gorillaauth_service/src/util/: tracing.rs
GorillaAuth/gorillaauth_website/: Cargo.toml
GorillaAuth/gorillaauth_website/src/: app.rs  main.rs
GorillaAuth/gorillaauth_website/src/pages/: welcome.rs
secrets_manager/: Cargo.toml
secrets_manager/src/: lib.rs
