[workspace]
resolver = "2"
members = ["GorillaAuth/gorillaauth_website", "GorillaAuth/gorillaauth_service", "GorillaAuth/gorillaauth_client"]

[profile.dev]
# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binaty size.
opt-level = 0

[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[workspace.dependencies]
axum = { version = "0.7.4" }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
bcrypt = "0.15.1"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
http = "1.0.0"
leptonic = { git = "https://github.com/lpotthast/leptonic", features = ["nightly"] }
leptos = { version = "0.6.5", features = ["nightly"] }
leptos_axum = { version = "0.6.5"  }
leptos_meta = { version = "0.6.5", features = ["nightly"] }
leptos_router = { version = "0.6.5", features = ["nightly"] }
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.56"
time = { version = "0.3.36", features = ["wasm-bindgen"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"]}
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.92"
http-body-util = "0.1.2"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
