[package]
name = "gorillaauth_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "gorillaauth_service"
path = "src/lib.rs"

[[bin]]
name = "gorillaauth_service"
path = "src/main.rs"

[dependencies]
axum.workspace = true
bcrypt.workspace = true
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
http-body-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-wasm.workspace = true